--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
-name = "squirrel_noise_5"
-version = "0.1.0"
+name = "squirrel_noise5"
+version = "1.0.0"
 edition = "2024"
+authors = ["Paviel \"Esther\" Ulanovskyi"]
+description = "Implementation of SquirrelNoise version 5 with a random values generator and optional bindings with rand crate (rand_squirrel feature)"
+readme = "README.md"
+repository = "https://github.com/PaulUlanovskij/squirrel_noise_5.rs"
+license = "Creative Commons attribution 3.0 license (CC-BY-3.0 US)"
+keywords = ["gamedev", "random", "rng"]
+categories = ["algorithms", "game-development", "no-std", "no-std::no-alloc"]
 
 [dependencies]
 rand = {version = ">=0.9.2", optional = true}
